# CVRecommenderProject

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: cv.py  jobs.py  match.py  suggestions.py
backend/app/core/: config.py
backend/app/models/: cv.py  jobs.py  match.py  suggestion.py
backend/app/services/: cv_parser.py  job_fetcher.py  llm.py  matcher.py
backend/app/tests/: tests_cv.py  tests_match.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/features/job-matching/: JobMatchingPage.jsx  README.md  constants.js  formatters.js
frontend/src/features/job-matching/components/: CvUploader.jsx  JobCard.jsx  JobResults.jsx  SearchForm.jsx  SuggestionsPanel.jsx  SummaryMetrics.jsx
frontend/src/features/job-matching/hooks/: useJobMatchingWorkflow.js
frontend/src/lib/: api.js
nginx/: nginx.conf
