[project]
name = "cvrecommenderproject"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.109.1",
    "fastapi>=0.136.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "react>=4.3.0",
    "uvicorn>=0.49.0",
]
